<resources>
    <string name="app_name">Performance</string>
    <string name="test_app_name">TestPerformance</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">
        <![CDATA[


            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
            you can display camera preview and take pictures.


        ]]>
    </string>
    <string name="gallery">Gallery</string>
    <string name="setting_whitePeak">White Peak (128-255)</string>
    <string name="setting_blackNadir">Black Nadir (0-127)</string>
    <string name="setting_darkNoise">Dark Noise (0-1023)</string>
    <string name="setting_repeatTimes">Repeat Times (0-5)</string>
    <string name="setting_grid">Grid</string>
    <string name="setting_sound">Sound</string>
    <string name="setting_mbi_pattern_sync">MBI-Pattern sync</string>
    <string name="setting_mbi_cloud_sync">MBI-Cloud sync</string>
    <string name="setting_mbi_demo">Demo</string>
    <string name="setting_image_format">Image Format</string>
    <string name="setting_language">Language</string>
    <string name="setting_tell_a_friend">Tell a friend about Performance</string>
    <string name="setting_feedback">Feedback</string>
    <string name="setting_about">About</string>
    <string name="setting_reset">Reset</string>
    <string name="edt_hint_number">Enter a number</string>
</resources>
