<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/txt_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Setting"
        android:textColor="#FFFF"
        android:textSize="40dp"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/layout_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/txt_setting">

        <ImageView
            android:id="@+id/btn_grid"
            android:layout_width="@dimen/setting_button_size"
            android:layout_height="@dimen/setting_button_size"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_grid" />

        <TextView
            android:id="@+id/txt_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/btn_grid"
            android:text="@string/setting_grid"
            android:textColor="#FFFF"
            android:textSize="@dimen/setting_text_size" />

        <com.example.easy_toggle.EasyToggle
            android:id="@+id/toggle_btn_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/txt_grid"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/layout_grid">

        <ImageView
            android:id="@+id/btn_sound"
            android:layout_width="@dimen/setting_button_size"
            android:layout_height="@dimen/setting_button_size"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_speaker" />

        <TextView
            android:id="@+id/txt_sound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/btn_sound"
            android:text="@string/setting_sound"
            android:textColor="#FFFF"
            android:textSize="@dimen/setting_text_size" />

        <com.example.easy_toggle.EasyToggle
            android:id="@+id/toggle_btn_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/txt_sound"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_cloud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/layout_sound">

        <ImageView
            android:id="@+id/btn_cloud"
            android:layout_width="@dimen/setting_button_size"
            android:layout_height="@dimen/setting_button_size"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_cloud_sync" />

        <TextView
            android:id="@+id/txt_cloud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/btn_cloud"
            android:text="@string/setting_mbi_cloud_sync"
            android:textColor="#FFFF"
            android:textSize="@dimen/setting_text_size" />

        <com.example.easy_toggle.EasyToggle
            android:id="@+id/toggle_btn_cloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/txt_cloud"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            app:etBgOffColor="#EEE9E9"
            app:etBgOnColor="#00BCD4"
            app:etButtonColor="@color/colorPrimaryDark" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_format"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/layout_cloud">

        <ImageView
            android:id="@+id/btn_format"
            android:layout_width="@dimen/setting_button_size"
            android:layout_height="@dimen/setting_button_size"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_raw" />

        <TextView
            android:id="@+id/txt_format"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/btn_format"
            android:text="@string/setting_image_format"
            android:textColor="#FFFF"
            android:textSize="@dimen/setting_text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/layout_format">

        <ImageView
            android:id="@+id/btn_language"
            android:layout_width="@dimen/setting_button_size"
            android:layout_height="@dimen/setting_button_size"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_language" />

        <TextView
            android:id="@+id/txt_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/btn_language"
            android:text="@string/setting_language"
            android:textColor="#FFFF"
            android:textSize="@dimen/setting_text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_tell_a_friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/layout_language">

        <ImageView
            android:id="@+id/btn_tell_a_friend"
            android:layout_width="@dimen/setting_button_size"
            android:layout_height="@dimen/setting_button_size"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_tell_a_friend" />

        <TextView
            android:id="@+id/txt_tell_a_friend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/btn_tell_a_friend"
            android:text="@string/setting_tell_a_friend"
            android:textColor="#FFFF"
            android:textSize="@dimen/setting_text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/layout_tell_a_friend">

        <ImageView
            android:id="@+id/btn_feedback"
            android:layout_width="@dimen/setting_button_size"
            android:layout_height="@dimen/setting_button_size"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_feedback_mail" />

        <TextView
            android:id="@+id/txt_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/btn_feedback"
            android:text="@string/setting_feedback"
            android:textColor="#FFFF"
            android:textSize="@dimen/setting_text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/layout_feedback">

        <ImageView
            android:id="@+id/btn_about"
            android:layout_width="@dimen/setting_button_size"
            android:layout_height="@dimen/setting_button_size"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_about" />

        <TextView
            android:id="@+id/txt_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/btn_about"
            android:text="@string/setting_about"
            android:textColor="#FFFF"
            android:textSize="@dimen/setting_text_size" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>